--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.5.9",
+    "bcrypt": "^0.8.5",
     "express": "^4.14.0",
     "express-jwt": "^5.1.0",
     "jsonwebtoken": "^7.3.0",
+    "mongoose": "~4.9.2",
+    "morgan": "~1.8.1",
     "passport": "^0.3.2",
+    "passport-jwt": "^1.2.1",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {}
